<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fish"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_fish" />
        <item
            android:id="@+id/nav_bait"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_bait" />
        <item
            android:id="@+id/nav_tackle"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_tackle" />
        <item
            android:id="@+id/nav_lure"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_lure" />
        <item
            android:id="@+id/nav_stories"
            android:icon="@android:drawable/ic_lock_silent_mode_off"
            android:title="@string/menu_stories" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/menu_tips" />
    </group>
</menu>